Enhanced UI, fixed dev-up / dev-down using builx now
